Added babel/less support via gradle-enabled grunt
- Moved html to /templates

--- a/src/main/webapp/bootstrap-frontend/index.html
+++ b/src/main/webapp/bootstrap-frontend/index.html
@@ -30,10 +30,10 @@
             src="https://cdn.datatables.net/responsive/2.2.0/js/dataTables.responsive.js"></script>
 
     <!--Own-->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.dist.css">
 
-    <script src="js/index.js"></script>
-    <script src="js/ljp.js"></script>
+    <script src="js/index.dist.js"></script>
+    <script src="js/ljp.dist.js"></script>
 </head>
 
 <body>
